--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <DOCTYPE HTML!>
-<HTML>
-<BODY>
-<BUTTON><A HREF = "https://amrwassiem.github.io/Equation/equation.html">GO</a></button>
+<html>
+<body style="background-color:blue;padding:50%">
+
 </body>
 </html>
