--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <DOCTYPE HTML!>
 <html>
 <body style="background-color:blue;padding:50%">
+<button style="background-color:blue;border-radius: 25px;width:20%; height:10%;"/>
 </body>
 </html>
