--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <DOCTYPE HTML!>
 <html>
-<body style="background-color:blue;padding-top:80%">
-<button style="background-color:blue;border-radius: 25px;width:50%; height:10%;border: 15px solid green;">
+<body style="background-color:blue;padding:80%">
+<button style="background-color:blue;border-radius: 25px;width:20%; height:10%;border: 15px solid green; text-align: center;">
+Get Started
 </button>
 </body>
 </html>
