--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML!>
 <html>
 <body style="background-color:blue;padding:80%">
-<button style="background-color:blue;border-radius: 25px;width:20%; height:10%;border: 15px solid green; text-align: center;">
+<button style="background-color:blue;border-radius: 10px;width:10%; height:10%;border: 15px solid green; text-align: center; color: black;">
 Get Started
 </button>
 </body>
