--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML!>
 <html>
 <body style="background-color:blue;">
-<button style="background-color:blue;border-radius: 30px;border: 5px solid green; text-align: center; color: black;">
+<button style="background-color:blue;border-radius: 30px;border: 5px solid green; color: black;">
 Get Started
 </button>
 </body>
