--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML!>
 <html>
-<body style="background-color:blue;">
-<button style="background-color:blue;border-radius: 30px;border: 5px solid green; color: black;">
+<body style="background-color:blue; padding:80%">
+<button style="background-color:red;border-radius: 30px;border: 1px solid green; color: black; font-size:30px;">
 Get Started
 </button>
 </body>
