--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML!>
 <html>
 <body style="background-color:blue; padding:80%">
-<button style="background-color:red;border-radius: 30px;border: 2px solid green; color: black; font-size:30px;">
+<button style="background-color:red;border-radius: 30px;border: 2px solid green; color: black; font-size:30px; padding:50%;">
 Get Started
 </button>
 </body>
