--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <DOCTYPE HTML!>
 <html>
-<body style="background-color:blue; padding:80%">
+<body style="background-color:blue; padding:50%;">
 <button style="background-color:red;border-radius: 30px;border: 2px solid green; color: black; font-size:30px; padding:50%;width: 250px;cursor: pointer;display: inline-block; height:60px;">
 Get Started
 </button>
