--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML!>
 <html>
 <body style="background-color:blue; padding:50%;">
-<button style="background-color:red;border-radius: 30px;border: 2px solid green; color: black; font-size:30px; padding:50%;width: 100%;cursor: pointer;display: inline-block; height:10%;">
+<button style="background-color:red;border-radius: 30px;border: 2px solid green; color: black; font-size:30px; padding:50%;width: 100%;cursor: pointer;display: inline-block; height:10%;outline:none;">
 Get Started
 </button>
 </body>
